# FlowBoard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.schema.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  dashboard.md  field-mapping.md  jira-enterprise.md  schema.md  security.md  troubleshooting.md  usage.md
examples/: config.enterprise.json  config.example.json  config.kanban.json  config.minimal.json  config.waterfall.json
examples/fixtures/: mock_jira_data.json
src/flowboard/: __init__.py
src/flowboard/application/: data_quality.py  orchestrator.py  services.py
src/flowboard/cli/: main.py
src/flowboard/domain/: analytics.py  dependencies.py  kanban_compute.py  kanban_models.py  models.py  overlap.py  pi.py  risk.py  scrum.py  scrum_compute.py  scrum_models.py  simulation.py  simulation_engine.py  simulation_models.py  timeline.py  waterfall_compute.py  (+2 more)
tests/: conftest.py  test_accessibility.py  test_accessibility_interactive.py  test_accessibility_visual.py  test_analytics.py  test_analytics_correctness.py  test_app_features.py  test_app_features_ui.py  test_cli.py  test_config.py  test_dashboard_config.py  test_data_integrity.py  test_defensive_utilities.py  test_dependencies.py  test_design_system.py  test_domain_edge_cases.py  test_domain_edge_cases_extended.py  test_exports.py  test_html_renderer.py  test_i18n.py  test_infrastructure_resilience.py  test_jira_connector.py  test_methodology.py  test_methodology_kanban_waterfall.py  test_middleware.py  test_middleware_integration.py  test_normalization_robustness.py  test_normalizer.py  test_overlap.py  test_pi.py  test_risk.py  test_scrum.py  test_security.py  test_simulation.py  test_smoke.py  test_timeline.py  test_ui_components.py  test_ux_features.py  test_wizard.py  test_wizard_methodology.py  (+2 more)
(+56 files in other folders)
